<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="20dp"
    android:paddingTop="5dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/incoming_selector"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:linksClickable="false"
            android:text="@string/STR_NMS_INTRODUCTION"
            android:textColor="#222222"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_terms_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:autoLink="all"
                android:text="@string/STR_NMS_MENU_LICENSE_AGREEMENT"
                android:textColor="#33b5e5"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_activation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/STR_NMS_ACTIVATION_BUTTON"
                android:focusable="false"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>